--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
   <!-- header -->
   <header>
     <div class="header-container">
-      <img src="img/main.jpg" alt="トップ画像" width="100%" height="620">
+      <!-- <img src="img/main.jpg" alt="トップ画像"> -->
+      <div class="parallax-bg-main img-bg-00">
+          <h2>MENU</h2>
+        </div>
       <nav>
         <ul>
           <li>
@@ -40,8 +43,11 @@
     <!-- menu -->
     <section class="cafe-menu" id="menu-content">
       <div class="section-img-wrapper menu-wrapper">
-        <img src="img/cafe.jpg" alt="カフェ画像" width="100%" height="620">
-        <h2>MENU</h2>
+        <!-- <img src="img/cafe.jpg" alt="カフェ画像" width="100%" height="620"> -->
+        <div class="parallax-bg img-bg-01">
+          <h2>MENU</h2>
+        </div>
+        <!-- <h2>MENU</h2> -->
       </div>
       <div class="menu-parent">
         <section class="coffee-menu menus">
@@ -106,8 +112,9 @@
     <section class="about" id="about-content">
       <div class="about-container">
         <div class="section-img-wrapper about-img-wrapper">
-          <img src="img/cafe.jpg" alt="カフェ画像" width="100%" height="620">
-          <h2>ABOUT</h2>
+          <div class="parallax-bg img-bg-01">
+            <h2>ABOUT</h2>
+          </div>
         </div>
         <div class="about-wrapper">
           <div class="menu-title">
@@ -141,8 +148,9 @@
     <!-- location -->
     <section class="location" id="location-content">
       <div class="section-img-wrapper">
-        <img src="img/cafe.jpg" alt="カフェ画像" width="100%" height="620">
-        <h2>LOCATION</h2>
+        <div class="parallax-bg img-bg-01">
+          <h2>LOCATION</h2>
+        </div>
       </div>
 
       <div class="ourstore-container">
