--- a/index.html
+++ b/index.html
@@ -43,11 +43,10 @@
     <!-- menu -->
     <section class="cafe-menu" id="menu-content">
       <div class="section-img-wrapper menu-wrapper">
-        <!-- <img src="img/cafe.jpg" alt="カフェ画像" width="100%" height="620"> -->
+        <!-- <h2>MENU</h2> -->
         <div class="parallax-bg img-bg-01">
           <h2>MENU</h2>
         </div>
-        <!-- <h2>MENU</h2> -->
       </div>
       <div class="menu-parent">
         <section class="coffee-menu menus">
@@ -142,9 +141,6 @@
         </div>
       </div>
       
-      <!-- <div class="button-wrapper">
-        <a href="#">Read More</a>
-      </div> -->
       <div class="read-more">
         <a class="button" href="#">Read More</a>
       </div>
@@ -158,7 +154,7 @@
         </div>
       </div>
 
-      <div class="ourstore-container">
+      <div class="ourstore-container menu-title">
         <h3>OUR STORE</h3>
 
         <!-- map -->
